--- a/Data Binding (Basic)/UserInfoDataBinding/app/src/main/res/layout/activity_main.xml
+++ b/Data Binding (Basic)/UserInfoDataBinding/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
         android:layout_height="match_parent"
         tools:context=".ui.MainActivity">
 
+        <!--Tag-->
         <TextView
             android:id="@+id/textView_tagUserInfo"
             android:layout_width="wrap_content"
@@ -31,8 +32,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent" />
-
-        <!--bind image. Replace android:src with app:imageResource if you want to bind image-->
 
         <TextView
             android:id="@+id/textView_tagUserId"
@@ -60,10 +59,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView_tagUserId" />
 
-        <!--bind text-->
-
-        <!--bind text-->
-
+        <!--User Info-->
+        <!--bind object-->
         <TextView
             android:id="@+id/textView_tagUserAge"
             android:layout_width="wrap_content"
@@ -77,6 +74,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView_tagUserName" />
 
+        <!--bind image. Replace android:src with app:imageResource if you want to bind image-->
         <ImageView
             android:id="@+id/imageView_user"
             android:layout_width="0dp"
@@ -138,6 +136,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textView_name"
             tools:text="28" />
 
+        <!--Control Button-->
         <Button
             android:id="@+id/button_previous"
             android:layout_width="0dp"
@@ -145,7 +144,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:onClick="previousButtonTrigger"
-            android:text="@string/previous"
+            android:text="@string/btnPrevious"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/button_next"
             app:layout_constraintHorizontal_bias="0.582"
@@ -160,7 +159,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:onClick="nextButtonTrigger"
-            android:text="@string/next"
+            android:text="@string/btnNext"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/button_previous"
