--- a/Room/AccountListPlusRoom/app/src/main/res/layout/adapter_rv_account.xml
+++ b/Room/AccountListPlusRoom/app/src/main/res/layout/adapter_rv_account.xml
@@ -37,7 +37,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:text="@{`RM ` + String.valueOf(account.amount)}"
+                android:text=""
                 android:textColor="#FFFFFF"
                 android:textSize="12sp"
                 tools:text="RM 24.00" />
@@ -52,7 +52,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
-                android:text="@{String.valueOf(account.number)}"
+                android:text="@{account.number}"
                 android:textColor="#80FFFFFF"
                 android:textSize="12sp"
                 tools:text="210455494923" />
